RESOLVED FIXED105942
[BlackBerry] Cached frame shouldn't access the page when being destroyed
https://bugs.webkit.org/show_bug.cgi?id=105942
Summary [BlackBerry] Cached frame shouldn't access the page when being destroyed
Yong Li
Reported 2013-01-02 13:53:53 PST
When a cached frame is being teared down, its original owner page may have been destroyed. So it is not safe to access the page and its data. PR272137
Attachments
the patch (3.52 KB, patch)
2013-01-02 14:01 PST, Yong Li
no flags
the fix (3.52 KB, patch)
2013-01-04 12:27 PST, Yong Li
no flags
the fix (1.63 KB, patch)
2013-01-04 12:28 PST, Yong Li
no flags
Yong Li
Comment 1 2013-01-02 14:01:06 PST
Created attachment 181060 [details] the patch
WebKit Review Bot
Comment 2 2013-01-02 14:42:35 PST
Comment on attachment 181060 [details] the patch Clearing flags on attachment: 181060 Committed r138652: <http://trac.webkit.org/changeset/138652>
WebKit Review Bot
Comment 3 2013-01-02 14:42:38 PST
All reviewed patches have been landed. Closing bug.
Yong Li
Comment 4 2013-01-04 12:27:24 PST
Yong Li
Comment 5 2013-01-04 12:27:59 PST
reopen
Yong Li
Comment 6 2013-01-04 12:28:18 PST
WebKit Review Bot
Comment 7 2013-01-04 13:25:07 PST
Comment on attachment 181358 [details] the fix Clearing flags on attachment: 181358 Committed r138846: <http://trac.webkit.org/changeset/138846>
WebKit Review Bot
Comment 8 2013-01-04 13:25:11 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.