[BlackBerry] Cached frame shouldn't access the page when being destroyed https://bugs.webkit.org/show_bug.cgi?id=105942

Reviewed by George Staikos.

In order to prevent our FrameLoaderClient from dangling WebPagePrivate object in any case,
this patches clear the m_webPagePrivate pointer when the frame is detached or cached.

RIM PR# 272137.

* WebCoreSupport/FrameLoaderClientBlackBerry.cpp:
(WebCore::FrameLoaderClientBlackBerry::isMainFrame):
(WebCore::FrameLoaderClientBlackBerry::detachedFromParent2):
(WebCore::FrameLoaderClientBlackBerry::didSaveToPageCache):
(WebCore::FrameLoaderClientBlackBerry::didRestoreFromPageCache):


git-svn-id: svn://svn.chromium.org/blink/trunk@138652 bbb929c8-8fbe-4397-9dbb-9b2b20218538